third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/float.stderr
TOML parse error at line 1, column 17
  |
1 | leading-zero = 03.14
  |                 ^
expected newline, `#`
